--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -1,1 +1,10 @@
 <h1>Make Your Blog! </h1>
+<h2>블로그 글 목록</h2>
+{% for post in posts %}
+제목 : {{post.title}}
+<br>
+작성자 : {{post.writer}}
+<br>
+{{post.pub_date}}
+<hr>
+{% endfor %}
