--- a/blog/templates/detail.html
+++ b/blog/templates/detail.html
@@ -12,4 +12,6 @@
 </p>
 <br>
 <a href="{% url 'home' %}"> home </a>
+<br>
+<a href="{% url 'edit' post.id %}">수정하기</a>
 <a href="{%url 'delete' post.id %}">삭제하기</a>
