--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -1,12 +1,15 @@
 {% extends 'base.html' %}
 {% block content %}
+
 <div class="container">
     <h1>Make Your Blog! </h1>
+    {% if user.is_authenticated %}
     <a href="{% url 'new'%}">새 글 작성하기 </a>
+    {% endif %}
     <h2>블로그 글 목록</h2>
     <hr>
     <div class="row">
-        {% for post in posts %}
+        {% for post in blogs %}
         <div class="card col-4">
             <a href="{% url 'detail' post.id %}">
                 <b>제목 : {{post.title}}</b>
@@ -20,5 +23,20 @@
 
         {% endfor %}
     </div>
+    {%if blogs.has_previous%}
+    <a href="?page=1">First</a>
+    <a href="?page={{blogs.previous_page_number}}">Previous</a>
+    {%endif%}
+    
+    <span>{{blogs.number}}</span>
+    <span>of</span>
+    <span>{{blogs.paginator.num_pages}}</span>
+    
+    {%if blogs.has_next%}
+    <a href="?page={{blogs.next_page_number}}">Next</a>
+    <a href="?page={{blogs.paginator.num_pages}}">Last</a>
+    {%endif%}
 </div>
+
+
 {% endblock %}
