--- a/lion_class/templates/base.html
+++ b/lion_class/templates/base.html
@@ -25,9 +25,23 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
+                {% if not user.is_authenticated %}
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href="{% url 'login' %}">Login</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'signup' %}">Signup</a>
+                </li>
+                
+                {% else %}
+                <li class="nav-item">
+                    <form id="logout" method="POST" action="{% url 'logout' %}">
+                        {% csrf_token %} 
+                        <input type="submit" value="로그아웃">
+                    </form>
+                </li>
+                {% endif %}
+                
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
