--- a/blog/templates/detail.html
+++ b/blog/templates/detail.html
@@ -1,21 +1,47 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>Detail Post</h1>
-
-<p>
-    <h2>제목 : {{post.title}}</h2>
-    <p>작성자 : {{post.writer}}</p>
-    <p>발행일 : {{post.pub_date}}</p>
+<div class="container">
+    <h1>Detail Post</h1>
+    <p>이 글을 '좋아요'하는 사람</p>
+    {% for user in post.user.all %}
+    {{user}}
+    {% endfor %}
     <p>
-        본문
-        <br>
-        {{post.body}}
+        <h2>제목 : {{post.title}}</h2>
+        <p>작성자 : {{post.writer}}</p>
+        <p>발행일 : {{post.pub_date}}</p>
+        <p>
+            본문
+            <br>
+            {{post.body}}
+        </p>
     </p>
-</p>
-<br>
-<a href="{% url 'home' %}"> home </a>
-<br>
-<a href="{% url 'edit' post.id %}">수정하기</a>
-<a href="{%url 'delete' post.id %}">삭제하기</a>
+    <form action="{% url 'like' post.id%}" method="get">
+        <input type="hidden" name = 'like' value="{{user}}">
+        <button type="submit">좋아요</button>
+    </form>
+    
+    <br>
+    <a href="{% url 'home' %}"> home </a>
+    <br>
+    
 
+    <a href="{% url 'edit' post.id %}">수정하기</a>
+    <a href="{%url 'delete' post.id %}">삭제하기</a>
+    <hr>
+    <h2>comments</h2>
+    {% for comment in comments %}
+    {{comment.writer}}
+    <br>
+    {{comment.content}}
+    <hr>
+    {% endfor%}
+    <form action="{% url 'new_comment' post.id %}" method="POST">
+        {% csrf_token %}
+        작성자 : <input name="writer" type="text">
+        <br>
+        내용 : <textarea name="content" id="" cols="30" rows="10"></textarea>
+        <input type="submit">
+    </form>
+</div>
 {%endblock%}
